Pull request #150: fix description scrollbar
Merge in EXTENSIONS/browser-extension-v3 to master

Squashed commit of the following:

commit 1b8bd8ff540ca8d34995fee519abadc7fc4c3ff5
Merge: 4eb664f ac1020f
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Aug 26 14:07:24 2022 +0300

    Merge branch 'master' into feature/AG-16049

commit 4eb664fbc7014a8eb7db7e5e6aae3a1b8c325427
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Aug 24 12:55:00 2022 +0300

    AG-16049 fix description scrollbar

--- a/src/common/styles/modal.module.pcss
+++ b/src/common/styles/modal.module.pcss
@@ -133,8 +133,6 @@
     overflow-y: auto;
     padding: 14px 11px;
     background: var(--grayDark);
-    border: 1px solid var(--gray700);
-    border-radius: 8px;
     box-sizing: border-box;
     font-size: 1.rem;
     line-height: 1.12rem;
@@ -142,6 +140,12 @@
     &.name {
         word-break: break-all;
     }
+}
+
+.filterDescriptionWrapper {
+    overflow: hidden;
+    border: 1px solid var(--gray700);
+    border-radius: 8px;
 }
 
 .footer {
